TranslationOfProgrammingLanguage/project5/asg_wyp/mypy/parse.output
Terminals unused in grammar

   NUMBER


Grammar

    0 $accept: start $end

    1 start: file_input

    2 file_input: star_NEWLINE_stmt ENDMARKER

    3 pick_NEWLINE_stmt: NEWLINE
    4                  | stmt

    5 star_NEWLINE_stmt: star_NEWLINE_stmt pick_NEWLINE_stmt
    6                  | %empty

    7 decorator: AT dotted_name LPAR opt_arglist RPAR NEWLINE
    8          | AT dotted_name NEWLINE

    9 opt_arglist: arglist
   10            | %empty

   11 decorators: decorators decorator
   12           | decorator

   13 decorated: decorators classdef
   14          | decorators funcdef

   15 funcdef: DEF NAME parameters COLON suite

   16 parameters: LPAR varargslist RPAR
   17           | LPAR RPAR

   18 varargslist: star_fpdef_COMMA pick_STAR_DOUBLESTAR
   19            | star_fpdef_COMMA fpdef opt_EQUAL_test opt_COMMA

   20 opt_EQUAL_test: EQUAL test
   21               | %empty

   22 star_fpdef_COMMA: star_fpdef_COMMA fpdef opt_EQUAL_test COMMA
   23                 | %empty

   24 opt_DOUBLESTAR_NAME: COMMA DOUBLESTAR NAME
   25                    | %empty

   26 pick_STAR_DOUBLESTAR: STAR NAME opt_DOUBLESTAR_NAME
   27                     | DOUBLESTAR NAME

   28 opt_COMMA: COMMA
   29          | %empty

   30 fpdef: NAME
   31      | LPAR fplist RPAR

   32 fplist: fpdef star_fpdef_notest COMMA
   33       | fpdef star_fpdef_notest

   34 star_fpdef_notest: star_fpdef_notest COMMA fpdef
   35                  | %empty

   36 stmt: simple_stmt
   37     | compound_stmt

   38 simple_stmt: small_stmt star_SEMI_small_stmt SEMI NEWLINE
   39            | small_stmt star_SEMI_small_stmt NEWLINE

   40 star_SEMI_small_stmt: star_SEMI_small_stmt SEMI small_stmt
   41                     | %empty

   42 small_stmt: expr_stmt
   43           | print_stmt
   44           | del_stmt
   45           | pass_stmt
   46           | flow_stmt
   47           | import_stmt
   48           | global_stmt
   49           | exec_stmt
   50           | assert_stmt

   51 expr_stmt: testlist augassign pick_yield_expr_testlist
   52          | testlist EQUAL star_EQUAL
   53          | testlist

   54 pick_yield_expr_testlist: yield_expr
   55                         | testlist

   56 star_EQUAL: pick_yield_expr_testlist EQUAL star_EQUAL
   57           | pick_yield_expr_testlist

   58 augassign: PLUSEQUAL
   59          | MINEQUAL
   60          | STAREQUAL
   61          | SLASHEQUAL
   62          | PERCENTEQUAL
   63          | AMPEREQUAL
   64          | VBAREQUAL
   65          | CIRCUMFLEXEQUAL
   66          | LEFTSHIFTEQUAL
   67          | RIGHTSHIFTEQUAL
   68          | DOUBLESTAREQUAL
   69          | DOUBLESLASHEQUAL

   70 print_stmt: PRINT opt_test
   71           | PRINT RIGHTSHIFT test opt_test_2

   72 star_COMMA_test: star_COMMA_test COMMA test
   73                | %empty

   74 opt_test: test star_COMMA_test opt_COMMA
   75         | %empty

   76 plus_COMMA_test: plus_COMMA_test COMMA test
   77                | COMMA test

   78 opt_test_2: plus_COMMA_test opt_COMMA
   79           | %empty

   80 del_stmt: DEL exprlist

   81 pass_stmt: PASS

   82 flow_stmt: break_stmt
   83          | continue_stmt
   84          | return_stmt
   85          | raise_stmt
   86          | yield_stmt

   87 break_stmt: BREAK

   88 continue_stmt: CONTINUE

   89 return_stmt: RETURN testlist
   90            | RETURN

   91 yield_stmt: yield_expr

   92 raise_stmt: RAISE test opt_test_3
   93           | RAISE

   94 opt_COMMA_test: COMMA test
   95               | %empty

   96 opt_test_3: COMMA test opt_COMMA_test
   97           | %empty

   98 import_stmt: import_name
   99            | import_from

  100 import_name: IMPORT dotted_as_names

  101 import_from: FROM pick_dotted_name IMPORT pick_STAR_import

  102 pick_dotted_name: star_DOT dotted_name
  103                 | star_DOT DOT

  104 pick_STAR_import: STAR
  105                 | LPAR import_as_names RPAR
  106                 | import_as_names

  107 import_as_name: NAME AS NAME
  108               | NAME

  109 dotted_as_name: dotted_name AS NAME
  110               | dotted_name

  111 import_as_names: import_as_name star_COMMA_import_as_name COMMA
  112                | import_as_name star_COMMA_import_as_name

  113 star_COMMA_import_as_name: star_COMMA_import_as_name COMMA import_as_name
  114                          | %empty

  115 dotted_as_names: dotted_as_name
  116                | dotted_as_names COMMA dotted_as_name

  117 dotted_name: NAME
  118            | dotted_name DOT NAME

  119 global_stmt: GLOBAL NAME star_COMMA_NAME

  120 star_COMMA_NAME: star_COMMA_NAME COMMA NAME
  121                | %empty

  122 exec_stmt: EXEC expr IN test opt_COMMA_test
  123          | EXEC expr

  124 assert_stmt: ASSERT test COMMA test
  125            | ASSERT test

  126 compound_stmt: if_stmt
  127              | while_stmt
  128              | for_stmt
  129              | try_stmt
  130              | with_stmt
  131              | funcdef
  132              | classdef
  133              | decorated

  134 if_stmt: IF test COLON suite star_ELIF ELSE COLON suite
  135        | IF test COLON suite star_ELIF

  136 star_ELIF: star_ELIF ELIF test COLON suite
  137          | %empty

  138 while_stmt: WHILE test COLON suite ELSE COLON suite
  139           | WHILE test COLON suite

  140 for_stmt: FOR exprlist IN testlist COLON suite ELSE COLON suite
  141         | FOR exprlist IN testlist COLON suite

  142 try_stmt: TRY COLON suite plus_except opt_ELSE opt_FINALLY
  143         | TRY COLON suite FINALLY COLON suite

  144 plus_except: plus_except except_clause COLON suite
  145            | except_clause COLON suite

  146 opt_ELSE: ELSE COLON suite
  147         | %empty

  148 opt_FINALLY: FINALLY COLON suite
  149            | %empty

  150 with_stmt: WITH with_item star_COMMA_with_item COLON suite

  151 star_COMMA_with_item: star_COMMA_with_item COMMA with_item
  152                     | %empty

  153 with_item: test AS expr
  154          | test

  155 except_clause: EXCEPT test opt_AS_COMMA
  156              | EXCEPT

  157 pick_AS_COMMA: AS
  158              | COMMA

  159 opt_AS_COMMA: pick_AS_COMMA test
  160             | %empty

  161 suite: simple_stmt
  162      | NEWLINE INDENT plus_stmt DEDENT

  163 plus_stmt: plus_stmt stmt
  164          | stmt

  165 testlist_safe: old_test plus_COMMA_old_test opt_COMMA
  166              | old_test

  167 plus_COMMA_old_test: plus_COMMA_old_test COMMA old_test
  168                    | COMMA old_test

  169 old_test: or_test
  170         | old_lambdef

  171 old_lambdef: LAMBDA varargslist COLON old_test
  172            | LAMBDA COLON old_test

  173 test: or_test opt_IF_ELSE
  174     | lambdef

  175 opt_IF_ELSE: IF or_test ELSE test
  176            | %empty

  177 or_test: and_test
  178        | or_test OR and_test

  179 and_test: not_test
  180         | and_test AND not_test

  181 not_test: NOT not_test
  182         | comparison

  183 comparison: expr
  184           | comparison comp_op expr

  185 comp_op: LESS
  186        | GREATER
  187        | EQEQUAL
  188        | GREATEREQUAL
  189        | LESSEQUAL
  190        | GRLT
  191        | NOTEQUAL
  192        | IN
  193        | NOT IN
  194        | IS
  195        | IS NOT

  196 expr: xor_expr
  197     | expr BAR xor_expr

  198 xor_expr: and_expr
  199         | xor_expr CIRCUMFLEX and_expr

  200 and_expr: shift_expr
  201         | and_expr AMPERSAND shift_expr

  202 shift_expr: arith_expr
  203           | shift_expr pick_LEFTSHIFT_RIGHTSHIFT arith_expr

  204 pick_LEFTSHIFT_RIGHTSHIFT: LEFTSHIFT
  205                          | RIGHTSHIFT

  206 arith_expr: term
  207           | arith_expr pick_PLUS_MINUS term

  208 pick_PLUS_MINUS: PLUS
  209                | MINUS

  210 term: factor
  211     | term pick_multop factor

  212 pick_multop: STAR
  213            | SLASH
  214            | PERCENT
  215            | DOUBLESLASH

  216 factor: pick_unop factor
  217       | power

  218 pick_unop: PLUS
  219          | MINUS
  220          | TILDE

  221 power: atom star_trailer DOUBLESTAR factor
  222      | atom star_trailer

  223 star_trailer: star_trailer trailer
  224             | %empty

  225 atom: LPAR opt_yield_test RPAR
  226     | LSQB opt_listmaker RSQB
  227     | LBRACE opt_dictorsetmaker RBRACE
  228     | BACKQUOTE testlist1 BACKQUOTE
  229     | NAME
  230     | INT
  231     | FLOAT
  232     | plus_STRING

  233 pick_yield_expr_testlist_comp: yield_expr
  234                              | testlist_comp

  235 opt_yield_test: pick_yield_expr_testlist_comp
  236               | %empty

  237 opt_listmaker: listmaker
  238              | %empty

  239 opt_dictorsetmaker: dictorsetmaker
  240                   | %empty

  241 plus_STRING: plus_STRING STRING
  242            | STRING

  243 listmaker: test list_for
  244          | test star_COMMA_test opt_COMMA

  245 testlist_comp: test comp_for
  246              | test star_COMMA_test opt_COMMA

  247 lambdef: LAMBDA varargslist COLON test
  248        | LAMBDA COLON test

  249 trailer: LPAR opt_arglist RPAR
  250        | LSQB subscriptlist RSQB
  251        | DOT NAME

  252 subscriptlist: subscript star_COMMA_subscript COMMA
  253              | subscript star_COMMA_subscript

  254 star_COMMA_subscript: star_COMMA_subscript COMMA subscript
  255                     | %empty

  256 subscript: DOT DOT DOT
  257          | test
  258          | opt_test_only COLON opt_test_only opt_sliceop

  259 opt_test_only: test
  260              | %empty

  261 opt_sliceop: sliceop
  262            | %empty

  263 sliceop: COLON test
  264        | COLON

  265 exprlist: expr star_COMMA_expr COMMA
  266         | expr star_COMMA_expr

  267 star_COMMA_expr: star_COMMA_expr COMMA expr
  268                | %empty

  269 testlist: test star_COMMA_test COMMA
  270         | test star_COMMA_test

  271 dictorsetmaker: test COLON test pick_for_test_test
  272               | test pick_for_test

  273 star_test_COLON_test: star_test_COLON_test COMMA test COLON test
  274                     | %empty

  275 pick_for_test_test: comp_for
  276                   | star_test_COLON_test opt_COMMA

  277 pick_for_test: comp_for
  278              | star_COMMA_test opt_COMMA

  279 classdef: CLASS NAME LPAR opt_testlist RPAR COLON suite
  280         | CLASS NAME COLON suite

  281 opt_testlist: testlist
  282             | %empty

  283 arglist: star_argument_COMMA pick_argument

  284 star_argument_COMMA: star_argument_COMMA argument COMMA
  285                    | %empty

  286 star_COMMA_argument: star_COMMA_argument COMMA argument
  287                    | %empty

  288 opt_DOUBLESTAR_test: COMMA DOUBLESTAR test
  289                    | %empty

  290 pick_argument: argument opt_COMMA
  291              | STAR test star_COMMA_argument opt_DOUBLESTAR_test
  292              | DOUBLESTAR test

  293 argument: test opt_comp_for
  294         | test EQUAL test

  295 opt_comp_for: comp_for
  296             | %empty

  297 list_iter: list_for
  298          | list_if

  299 list_for: FOR exprlist IN testlist_safe list_iter
  300         | FOR exprlist IN testlist_safe

  301 list_if: IF old_test list_iter
  302        | IF old_test

  303 comp_iter: comp_for
  304          | comp_if

  305 comp_for: FOR exprlist IN or_test comp_iter
  306         | FOR exprlist IN or_test

  307 comp_if: IF old_test comp_iter
  308        | IF old_test

  309 testlist1: test
  310          | testlist1 COMMA test

  311 yield_expr: YIELD testlist
  312           | YIELD

  313 star_DOT: star_DOT DOT
  314         | %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
AMPEREQUAL (258) 63
AMPERSAND (259) 201
AND (260) 180
AS (261) 107 109 153 157
ASSERT (262) 124 125
AT (263) 7 8
BACKQUOTE (264) 228
BAR (265) 197
BREAK (266) 87
CIRCUMFLEX (267) 199
CIRCUMFLEXEQUAL (268) 65
CLASS (269) 279 280
COLON (270) 15 134 135 136 138 139 140 141 142 143 144 145 146 148
    150 171 172 247 248 258 263 264 271 273 279 280
COMMA (271) 22 24 28 32 34 72 76 77 94 96 111 113 116 120 124 151 158
    167 168 252 254 265 267 269 273 284 286 288 310
CONTINUE (272) 88
DEDENT (273) 162
DEF (274) 15
DEL (275) 80
DOT (276) 103 118 251 256 313
DOUBLESLASHEQUAL (277) 69
DOUBLESTAREQUAL (278) 68
ELIF (279) 136
ELSE (280) 134 138 140 146 175
ENDMARKER (281) 2
EQEQUAL (282) 187
EXCEPT (283) 155 156
EXEC (284) 122 123
FINALLY (285) 143 148
FOR (286) 140 141 299 300 305 306
FROM (287) 101
GLOBAL (288) 119
GREATER (289) 186
GREATEREQUAL (290) 188
GRLT (291) 190
IF (292) 134 135 175 301 302 307 308
IMPORT (293) 100 101
IN (294) 122 140 141 192 193 299 300 305 306
INDENT (295) 162
IS (296) 194 195
LAMBDA (297) 171 172 247 248
LBRACE (298) 227
LEFTSHIFTEQUAL (299) 66
LESS (300) 185
LESSEQUAL (301) 189
LPAR (302) 7 16 17 31 105 225 249 279
LSQB (303) 226 250
MINEQUAL (304) 59
NEWLINE (305) 3 7 8 38 39 162
NOT (306) 181 193 195
NOTEQUAL (307) 191
NUMBER (308)
OR (309) 178
PASS (310) 81
PERCENTEQUAL (311) 62
PLUSEQUAL (312) 58
PRINT (313) 70 71
RAISE (314) 92 93
RBRACE (315) 227
RETURN (316) 89 90
RIGHTSHIFTEQUAL (317) 67
RPAR (318) 7 16 17 31 105 225 249 279
RSQB (319) 226 250
SEMI (320) 38 40
SLASHEQUAL (321) 61
STAREQUAL (322) 60
STRING (323) 241 242
TILDE (324) 220
TRY (325) 142 143
VBAREQUAL (326) 64
WHILE (327) 138 139
WITH (328) 150
YIELD (329) 311 312
EQUAL (330) 20 52 56 294
DOUBLESTAR (331) 24 27 221 288 292
LEFTSHIFT (332) 204
RIGHTSHIFT (333) 71 205
PLUS (334) 208 218
MINUS (335) 209 219
STAR (336) 26 104 212 291
SLASH (337) 213
PERCENT (338) 214
DOUBLESLASH (339) 215
NAME (340) 15 24 26 27 30 107 108 109 117 118 119 120 229 251 279 280
INT (341) 230
FLOAT (342) 231


Nonterminals, with rules where they appear

$accept (88)
    on left: 0
start (89)
    on left: 1, on right: 0
file_input (90)
    on left: 2, on right: 1
pick_NEWLINE_stmt (91)
    on left: 3 4, on right: 5
star_NEWLINE_stmt (92)
    on left: 5 6, on right: 2 5
decorator (93)
    on left: 7 8, on right: 11 12
opt_arglist (94)
    on left: 9 10, on right: 7 249
decorators (95)
    on left: 11 12, on right: 11 13 14
decorated (96)
    on left: 13 14, on right: 133
funcdef (97)
    on left: 15, on right: 14 131
parameters (98)
    on left: 16 17, on right: 15
varargslist (99)
    on left: 18 19, on right: 16 171 247
opt_EQUAL_test (100)
    on left: 20 21, on right: 19 22
star_fpdef_COMMA (101)
    on left: 22 23, on right: 18 19 22
opt_DOUBLESTAR_NAME (102)
    on left: 24 25, on right: 26
pick_STAR_DOUBLESTAR (103)
    on left: 26 27, on right: 18
opt_COMMA (104)
    on left: 28 29, on right: 19 74 78 165 244 246 276 278 290
fpdef (105)
    on left: 30 31, on right: 19 22 32 33 34
fplist (106)
    on left: 32 33, on right: 31
star_fpdef_notest (107)
    on left: 34 35, on right: 32 33 34
stmt (108)
    on left: 36 37, on right: 4 163 164
simple_stmt (109)
    on left: 38 39, on right: 36 161
star_SEMI_small_stmt (110)
    on left: 40 41, on right: 38 39 40
small_stmt (111)
    on left: 42 43 44 45 46 47 48 49 50, on right: 38 39 40
expr_stmt (112)
    on left: 51 52 53, on right: 42
pick_yield_expr_testlist (113)
    on left: 54 55, on right: 51 56 57
star_EQUAL (114)
    on left: 56 57, on right: 52 56
augassign (115)
    on left: 58 59 60 61 62 63 64 65 66 67 68 69, on right: 51
print_stmt (116)
    on left: 70 71, on right: 43
star_COMMA_test (117)
    on left: 72 73, on right: 72 74 244 246 269 270 278
opt_test (118)
    on left: 74 75, on right: 70
plus_COMMA_test (119)
    on left: 76 77, on right: 76 78
opt_test_2 (120)
    on left: 78 79, on right: 71
del_stmt (121)
    on left: 80, on right: 44
pass_stmt (122)
    on left: 81, on right: 45
flow_stmt (123)
    on left: 82 83 84 85 86, on right: 46
break_stmt (124)
    on left: 87, on right: 82
continue_stmt (125)
    on left: 88, on right: 83
return_stmt (126)
    on left: 89 90, on right: 84
yield_stmt (127)
    on left: 91, on right: 86
raise_stmt (128)
    on left: 92 93, on right: 85
opt_COMMA_test (129)
    on left: 94 95, on right: 96 122
opt_test_3 (130)
    on left: 96 97, on right: 92
import_stmt (131)
    on left: 98 99, on right: 47
import_name (132)
    on left: 100, on right: 98
import_from (133)
    on left: 101, on right: 99
pick_dotted_name (134)
    on left: 102 103, on right: 101
pick_STAR_import (135)
    on left: 104 105 106, on right: 101
import_as_name (136)
    on left: 107 108, on right: 111 112 113
dotted_as_name (137)
    on left: 109 110, on right: 115 116
import_as_names (138)
    on left: 111 112, on right: 105 106
star_COMMA_import_as_name (139)
    on left: 113 114, on right: 111 112 113
dotted_as_names (140)
    on left: 115 116, on right: 100 116
dotted_name (141)
    on left: 117 118, on right: 7 8 102 109 110 118
global_stmt (142)
    on left: 119, on right: 48
star_COMMA_NAME (143)
    on left: 120 121, on right: 119 120
exec_stmt (144)
    on left: 122 123, on right: 49
assert_stmt (145)
    on left: 124 125, on right: 50
compound_stmt (146)
    on left: 126 127 128 129 130 131 132 133, on right: 37
if_stmt (147)
    on left: 134 135, on right: 126
star_ELIF (148)
    on left: 136 137, on right: 134 135 136
while_stmt (149)
    on left: 138 139, on right: 127
for_stmt (150)
    on left: 140 141, on right: 128
try_stmt (151)
    on left: 142 143, on right: 129
plus_except (152)
    on left: 144 145, on right: 142 144
opt_ELSE (153)
    on left: 146 147, on right: 142
opt_FINALLY (154)
    on left: 148 149, on right: 142
with_stmt (155)
    on left: 150, on right: 130
star_COMMA_with_item (156)
    on left: 151 152, on right: 150 151
with_item (157)
    on left: 153 154, on right: 150 151
except_clause (158)
    on left: 155 156, on right: 144 145
pick_AS_COMMA (159)
    on left: 157 158, on right: 159
opt_AS_COMMA (160)
    on left: 159 160, on right: 155
suite (161)
    on left: 161 162, on right: 15 134 135 136 138 139 140 141 142
    143 144 145 146 148 150 279 280
plus_stmt (162)
    on left: 163 164, on right: 162 163
testlist_safe (163)
    on left: 165 166, on right: 299 300
plus_COMMA_old_test (164)
    on left: 167 168, on right: 165 167
old_test (165)
    on left: 169 170, on right: 165 166 167 168 171 172 301 302 307
    308
old_lambdef (166)
    on left: 171 172, on right: 170
test (167)
    on left: 173 174, on right: 20 71 72 74 76 77 92 94 96 122 124
    125 134 135 136 138 139 153 154 155 159 175 243 244 245 246 247
    248 257 259 263 269 270 271 272 273 288 291 292 293 294 309 310
opt_IF_ELSE (168)
    on left: 175 176, on right: 173
or_test (169)
    on left: 177 178, on right: 169 173 175 178 305 306
and_test (170)
    on left: 179 180, on right: 177 178 180
not_test (171)
    on left: 181 182, on right: 179 180 181
comparison (172)
    on left: 183 184, on right: 182 184
comp_op (173)
    on left: 185 186 187 188 189 190 191 192 193 194 195, on right:
    184
expr (174)
    on left: 196 197, on right: 122 123 153 183 184 197 265 266 267
xor_expr (175)
    on left: 198 199, on right: 196 197 199
and_expr (176)
    on left: 200 201, on right: 198 199 201
shift_expr (177)
    on left: 202 203, on right: 200 201 203
pick_LEFTSHIFT_RIGHTSHIFT (178)
    on left: 204 205, on right: 203
arith_expr (179)
    on left: 206 207, on right: 202 203 207
pick_PLUS_MINUS (180)
    on left: 208 209, on right: 207
term (181)
    on left: 210 211, on right: 206 207 211
pick_multop (182)
    on left: 212 213 214 215, on right: 211
factor (183)
    on left: 216 217, on right: 210 211 216 221
pick_unop (184)
    on left: 218 219 220, on right: 216
power (185)
    on left: 221 222, on right: 217
star_trailer (186)
    on left: 223 224, on right: 221 222 223
atom (187)
    on left: 225 226 227 228 229 230 231 232, on right: 221 222
pick_yield_expr_testlist_comp (188)
    on left: 233 234, on right: 235
opt_yield_test (189)
    on left: 235 236, on right: 225
opt_listmaker (190)
    on left: 237 238, on right: 226
opt_dictorsetmaker (191)
    on left: 239 240, on right: 227
plus_STRING (192)
    on left: 241 242, on right: 232 241
listmaker (193)
    on left: 243 244, on right: 237
testlist_comp (194)
    on left: 245 246, on right: 234
lambdef (195)
    on left: 247 248, on right: 174
trailer (196)
    on left: 249 250 251, on right: 223
subscriptlist (197)
    on left: 252 253, on right: 250
star_COMMA_subscript (198)
    on left: 254 255, on right: 252 253 254
subscript (199)
    on left: 256 257 258, on right: 252 253 254
opt_test_only (200)
    on left: 259 260, on right: 258
opt_sliceop (201)
    on left: 261 262, on right: 258
sliceop (202)
    on left: 263 264, on right: 261
exprlist (203)
    on left: 265 266, on right: 80 140 141 299 300 305 306
star_COMMA_expr (204)
    on left: 267 268, on right: 265 266 267
testlist (205)
    on left: 269 270, on right: 51 52 53 55 89 140 141 281 311
dictorsetmaker (206)
    on left: 271 272, on right: 239
star_test_COLON_test (207)
    on left: 273 274, on right: 273 276
pick_for_test_test (208)
    on left: 275 276, on right: 271
pick_for_test (209)
    on left: 277 278, on right: 272
classdef (210)
    on left: 279 280, on right: 13 132
opt_testlist (211)
    on left: 281 282, on right: 279
arglist (212)
    on left: 283, on right: 9
star_argument_COMMA (213)
    on left: 284 285, on right: 283 284
star_COMMA_argument (214)
    on left: 286 287, on right: 286 291
opt_DOUBLESTAR_test (215)
    on left: 288 289, on right: 291
pick_argument (216)
    on left: 290 291 292, on right: 283
argument (217)
    on left: 293 294, on right: 284 286 290
opt_comp_for (218)
    on left: 295 296, on right: 293
list_iter (219)
    on left: 297 298, on right: 299 301
list_for (220)
    on left: 299 300, on right: 243 297
list_if (221)
    on left: 301 302, on right: 298
comp_iter (222)
    on left: 303 304, on right: 305 307
comp_for (223)
    on left: 305 306, on right: 245 275 277 295 303
comp_if (224)
    on left: 307 308, on right: 304
testlist1 (225)
    on left: 309 310, on right: 228 310
yield_expr (226)
    on left: 311 312, on right: 54 91 233
star_DOT (227)
    on left: 313 314, on right: 102 103 313


State 0

    0 $accept: . start $end

    $default  reduce using rule 6 (star_NEWLINE_stmt)

    start              go to state 1
    file_input         go to state 2
    star_NEWLINE_stmt  go to state 3


State 1

    0 $accept: start . $end

    $end  shift, and go to state 4


State 2

    1 start: file_input .

    $default  reduce using rule 1 (start)


State 3

    2 file_input: star_NEWLINE_stmt . ENDMARKER
    5 star_NEWLINE_stmt: star_NEWLINE_stmt . pick_NEWLINE_stmt

    ASSERT     shift, and go to state 5
    AT         shift, and go to state 6
    BACKQUOTE  shift, and go to state 7
    BREAK      shift, and go to state 8
    CLASS      shift, and go to state 9
    CONTINUE   shift, and go to state 10
    DEF        shift, and go to state 11
    DEL        shift, and go to state 12
    ENDMARKER  shift, and go to state 13
    EXEC       shift, and go to state 14
    FOR        shift, and go to state 15
    FROM       shift, and go to state 16
    GLOBAL     shift, and go to state 17
    IF         shift, and go to state 18
    IMPORT     shift, and go to state 19
    LAMBDA     shift, and go to state 20
    LBRACE     shift, and go to state 21
    LPAR       shift, and go to state 22
    LSQB       shift, and go to state 23
    NEWLINE    shift, and go to state 24
    NOT        shift, and go to state 25
    PASS       shift, and go to state 26
    PRINT      shift, and go to state 27
    RAISE      shift, and go to state 28
    RETURN     shift, and go to state 29
    STRING     shift, and go to state 30
    TILDE      shift, and go to state 31
    TRY        shift, and go to state 32
    WHILE      shift, and go to state 33
    WITH       shift, and go to state 34
    YIELD      shift, and go to state 35
    PLUS       shift, and go to state 36
    MINUS      shift, and go to state 37
    NAME       shift, and go to state 38
    INT        shift, and go to state 39
    FLOAT      shift, and go to state 40

    pick_NEWLINE_stmt  go to state 41
    decorator          go to state 42
    decorators         go to state 43
    decorated          go to state 44
    funcdef            go to state 45
    stmt               go to state 46
    simple_stmt        go to state 47
    small_stmt         go to state 48
    expr_stmt          go to state 49
    print_stmt         go to state 50
    del_stmt           go to state 51
    pass_stmt          go to state 52
    flow_stmt          go to state 53
    break_stmt         go to state 54
    continue_stmt      go to state 55
    return_stmt        go to state 56
    yield_stmt         go to state 57
    raise_stmt         go to state 58
    import_stmt        go to state 59
    import_name        go to state 60
    import_from        go to state 61
    global_stmt        go to state 62
    exec_stmt          go to state 63
    assert_stmt        go to state 64
    compound_stmt      go to state 65
    if_stmt            go to state 66
    while_stmt         go to state 67
    for_stmt           go to state 68
    try_stmt           go to state 69
    with_stmt          go to state 70
    test               go to state 71
    or_test            go to state 72
    and_test           go to state 73
    not_test           go to state 74
    comparison         go to state 75
    expr               go to state 76
    xor_expr           go to state 77
    and_expr           go to state 78
    shift_expr         go to state 79
    arith_expr         go to state 80
    term               go to state 81
    factor             go to state 82
    pick_unop          go to state 83
    power              go to state 84
    atom               go to state 85
    plus_STRING        go to state 86
    lambdef            go to state 87
    testlist           go to state 88
    classdef           go to state 89
    yield_expr         go to state 90


State 4

    0 $accept: start $end .

    $default  accept


State 5

  124 assert_stmt: ASSERT . test COMMA test
  125            | ASSERT . test

    BACKQUOTE  shift, and go to state 7
    LAMBDA     shift, and go to state 20
    LBRACE     shift, and go to state 21
    LPAR       shift, and go to state 22
    LSQB       shift, and go to state 23
    NOT        shift, and go to state 25
    STRING     shift, and go to state 30
    TILDE      shift, and go to state 31
    PLUS       shift, and go to state 36
    MINUS      shift, and go to state 37
    NAME       shift, and go to state 38
    INT        shift, and go to state 39
    FLOAT      shift, and go to state 40

    test         go to state 91
    or_test      go to state 72
    and_test     go to state 73
    not_test     go to state 74
    comparison   go to state 75
    expr         go to state 76
    xor_expr     go to state 77
    and_expr     go to state 78
    shift_expr   go to state 79
    arith_expr   go to state 80
    term         go to state 81
    factor       go to state 82
    pick_unop    go to state 83
    power        go to state 84
    atom         go to state 85
    plus_STRING  go to state 86
    lambdef      go to state 87


State 6

    7 decorator: AT . dotted_name LPAR opt_arglist RPAR NEWLINE
    8          | AT . dotted_name NEWLINE

    NAME  shift, and go to state 92

    dotted_name  go to state 93


State 7

  228 atom: BACKQUOTE . testlist1 BACKQUOTE

    BACKQUOTE  shift, and go to state 7
    LAMBDA     shift, and go to state 20
    LBRACE     shift, and go to state 21
    LPAR       shift, and go to state 22
    LSQB       shift, and go to state 23
    NOT        shift, and go to state 25
    STRING     shift, and go to state 30
    TILDE      shift, and go to state 31
    PLUS       shift, and go to state 36
    MINUS      shift, and go to state 37
    NAME       shift, and go to state 38
    INT        shift, and go to state 39
    FLOAT      shift, and go to state 40

    test         go to state 94
    or_test      go to state 72
    and_test     go to state 73
    not_test     go to state 74
    comparison   go to state 75
    expr         go to state 76
    xor_expr     go to state 77
    and_expr     go to state 78
    shift_expr   go to state 79
    arith_expr   go to state 80
    term         go to state 81
    factor       go to state 82
    pick_unop    go to state 83
    power        go to state 84
    atom         go to state 85
    plus_STRING  go to state 86
    lambdef      go to state 87
    testlist1    go to state 95


State 8

   87 break_stmt: BREAK .

    $default  reduce using rule 87 (break_stmt)


State 9

  279 classdef: CLASS . NAME LPAR opt_testlist RPAR COLON suite
  280         | CLASS . NAME COLON suite

    NAME  shift, and go to state 96


State 10

   88 continue_stmt: CONTINUE .

    $default  reduce using rule 88 (continue_stmt)


State 11

   15 funcdef: DEF . NAME parameters COLON suite

    NAME  shift, and go to state 97


State 12

   80 del_stmt: DEL . exprlist

    BACKQUOTE  shift, and go to state 7
    LBRACE     shift, and go to state 21
    LPAR       shift, and go to state 22
    LSQB       shift, and go to state 23
    STRING     shift, and go to state 30
    TILDE      shift, and go to state 31
    PLUS       shift, and go to state 36
    MINUS      shift, and go to state 37
    NAME       shift, and go to state 38
    INT        shift, and go to state 39
    FLOAT      shift, and go to state 40

    expr         go to state 98
    xor_expr     go to state 77
    and_expr     go to state 78
    shift_expr   go to state 79
    arith_expr   go to state 80
    term         go to state 81
    factor       go to state 82
    pick_unop    go to state 83
    power        go to state 84
    atom         go to state 85
    plus_STRING  go to state 86
    exprlist     go to state 99


State 13

    2 file_input: star_NEWLINE_stmt ENDMARKER .

    $default  reduce using rule 2 (file_input)


State 14

  122 exec_stmt: EXEC . expr IN test opt_COMMA_test
  123          | EXEC . expr

    BACKQUOTE  shift, and go to state 7
    LBRACE     shift, and go to state 21
    LPAR       shift, and go to state 22
    LSQB       shift, and go to state 23
    STRING     shift, and go to state 30
    TILDE      shift, and go to state 31
    PLUS       shift, and go to state 36
    MINUS      shift, and go to state 37
    NAME       shift, and go to state 38
    INT        shift, and go to state 39
    FLOAT      shift, and go to state 40

    expr         go to state 100
    xor_expr     go to state 77
    and_expr     go to state 78
    shift_expr   go to state 79
    arith_expr   go to state 80
    term         go to state 81
    factor       go to state 82
    pick_unop    go to state 83
    power        go to state 84
    atom         go to state 85
    plus_STRING  go to state 86


State 15

  140 for_stmt: FOR . exprlist IN testlist COLON suite ELSE COLON suite
  141         | FOR . exprlist IN testlist COLON suite

    BACKQUOTE  shift, and go to state 7
    LBRACE     shift, and go to state 21
    LPAR       shift, and go to state 22
    LSQB       shift, and go to state 23
    STRING     shift, and go to state 30
    TILDE      shift, and go to state 31
    PLUS       shift, and go to state 36
    MINUS      shift, and go to state 37
    NAME       shift, and go to state 38
    INT        shift, and go to state 39
    FLOAT      shift, and go to state 40

    expr         go to state 98
    xor_expr     go to state 77
    and_expr     go to state 78
    shift_expr   go to state 79
    arith_expr   go to state 80
    term         go to state 81
    factor       go to state 82
    pick_unop    go to state 83
    power        go to state 84
    atom         go to state 85
    plus_STRING  go to state 86
    exprlist     go to state 101


State 16

  101 import_from: FROM . pick_dotted_name IMPORT pick_STAR_import

    $default  reduce using rule 314 (star_DOT)

    pick_dotted_name  go to state 102
    star_DOT          go to state 103


State 17

  119 global_stmt: GLOBAL . NAME star_COMMA_NAME

    NAME  shift, and go to state 104


State 18

  134 if_stmt: IF . test COLON suite star_ELIF ELSE COLON suite
  135        | IF . test COLON suite star_ELIF
